--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About Me</title>
+  </head>
+  <header>
+    <nav>
+      <ul>
+        <a href="./index.html"><li>Home</li></a>
+        <a href="./aboutme.html"><li>About Me</li></a>
+      </ul>
+    </nav>
+  </header>
+<body>
+  <h1>About Me</h1>
+  <p>About me goes here</p>
+  </body>
+<footer>
+  </footer>
+</html>
